Avoid nav overlap on last updated

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -36,7 +36,7 @@
   display: none;
   position: absolute;
   top: 1em;
-  right: 1em;
+  right: 3.25em;
   z-index: 30;
   font-size: $type-size-6;
   color: $gray;
